# ChangeLog for x11-wm/xfce
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xfce/Attic/ChangeLog,v 1.11 2002/12/09 12:04:58 jmorgan Exp $

*xfce-3.8.18-r1 (08 Dec 2002)
                                                                                                   
  08 Dev 2002; Jack Morgan <jmorgan@gentoo.org> xfce-3.8.18.ebuild :
  Removed sparc64 keyword

  08 Dec 2002; Brad Cowan <bcowan@gentoo.org> xfce-3.8.18-r1.ebuild,
  files/digest-xfce-3.8.18-r1 :

  Added support for taskbar, fixes bug #11788.

*xfce-3.8.18 (12 Nov 2002)

  12 Nov 2002; Brad Cowan <bcowan@gentoo.org> xfce-3.8.18.ebuild,
  files/digest-xfce-3.8.18 :

  Version bump.

*xfce-3.8.16 (25 Apr 2002)

  25 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> xfce-3.8.16.ebuild :

  New version.

  8 Apr 2002; M.Schlemmer <azarah@gentoo.org> files/xfce :

  Change start command to /usr/bin/startxfce.

*xfce-3.8.14 (28 Mar 2002)

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xfce-3.8.14.ebuild :

  Made gdk-pixbuf dependent on the gtk USE toggle instead of gnome, since
  gdk is tied to gtk, not gnome.  This is admittedly strange since gtk is
  actually a required dependency.

*xfce-3.8.14 (27 Mar 2002)

  27 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xfce-3.8.14.ebuild :

  norbert@nrpil.tmfweb.nl (Norbert Pil) submitted the version update.

*xfce-3.8.11-r3 (17 Mar 2002)

  17 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xfce-3.8.11-r3 :
  The LICENSE file is no longer distributed with the source, so I removed the
  entry for that from the dodoc statement.  While I was at it, I decided to
  have the `make install` step which installs the html documentation, place 
  the html stuff into /usr/share/doc/${PF} where all the other docs are, instead
  of /usr/share/xfce/doc where they are installed by default.

*xfce-3.8.11-r2 (12 Mar 2002)

  12 Mar 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog: