@@ -1,0 +1,1 @@
+MD5 04c197eee32d712a49170539d50279ea xfce-3.8.18.tar.gz 5166881
