@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/xfce
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xfce/Attic/ChangeLog,v 1.11 2002/12/09 12:04:58 jmorgan Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xfce/Attic/ChangeLog,v 1.12 2003/01/05 20:27:32 bcowan Exp $
+
+*xfce-3.8.18-r2 (05 Jan 2003)
+                                                                                                   
+  05 Jan 2003; Brad Cowan <bcowan@gentoo.org> xfce-3.8.18-r2.ebuild,
+  files/digest-xfce-3.8.18-r2:
+  Added xft2 check, hopefully fixes bug# 13219.
 
 *xfce-3.8.18-r1 (08 Dec 2002)
                                                                                                    
